# flight-game-server

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
cdk/: .gitignore  README.md  app.py
cdk/cdk/: cdk_stack.py
cdk/cdk/scripts/: game-server.service  update-dns.service  update-dns.sh
src/: main.rs  messages.rs  state.rs
